[package]
name = "prawnedwasm"
version = "0.1.0"
authors = ["Matthew Weeks <scriptjunkie@scriptjunkie.us>"]
edition = "2018"
license = "AGPL 3"

[dependencies]
wasm-bindgen = "0.2.69"
p256 = { version = "0.7.2", features = ["ecdh", "ecdsa"] }
js-sys = "0.3.47"
rand_core = "0.5.1"
aes-gcm-siv = { version = "0.9.0", features = ["heapless"] }

[lib]
crate-type = ["cdylib"]
